--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,69 +2,80 @@
 import Body from "@/Body.astro";
 ---
 
-<Body title="About me">
-  <hgroup>
-    <h1 class="title">I'm Rishav Mandal</h1>
-    <p class="sub-title">And the creator of this website.</p>
+<Body
+  title="About me"
+  description="I'm an under graduate CS student completing B.Tech from RCC Institute of Infornation Technology college. This is my final year and will be pass out after July 2024."
+>
+  <!-- <hgroup data-aimate-container>
+    <h1 data-aimate></h1>
+    <p data-aimate></p>
+  </hgroup> -->
+  <hgroup data-animate-container>
+    <h1 data-animate>I'm Rishav Mandal</h1>
+    <h6 data-animate>CS student and the creator of Fallenblogs.</h6>
   </hgroup>
 
-  <p>Again, Fallen is my GitHub username.</p>
+  <div data-animate-container>
+    <p data-animate>Again, Fallen is my GitHub username.</p>
+  </div>
 
-  <p>
-    <span>
+  <p data-animate-container>
+    <span data-animate>
       I'm an under graduate CS student completing B.Tech from RCC Institute of
       Infornation Technology college. This is my final year and will be pass out
       after July 2024.
     </span>
   </p>
 
-  <p>
-    Things I have learnt over the past three years:
-    <ul>
-      <li>React, SvelteKit, Angular and Astro web frameworks.</li>
-      <li>
-        Python, Postgress, Prisma and services like Supabase, MongoDB, Cyclic
-        store and Vercel store.
-      </li>
-      <li>
-        Java, C and SQL these were required to learn for my college courses.
-      </li>
-      <li>Bash, Perl and Fish because I'm an Arch Linux user btw.</li>
-      <li>
-        Haskell for <a
-          href="http://xmonad.org"
-          target="_blank"
-          class="contrast"
-          rel="noopener noreferrer">Xmonad</a
-        > and Lua for <a
-          href="https://awesomewm.org/"
-          class="contrast"
-          target="_blank"
-          rel="noopener noreferrer">AwesomeWM.</a
-        >
-        <br />
-         Not good at those but learnt because they were needed.
-      </li>
-    </ul>
-  </p>
-
-  <article>
-    <h5>My most loved tech stack for web</h5>
-
-    <p><strong>Framework:</strong> SvelteKit</p>
-    <p><strong>Theme:</strong> Tailwind</p>
-    <p><strong>Database:</strong> Supabase</p>
-    <p><strong>ORM:</strong> Prisma</p>
-    <p>
-      <strong>Authentication:</strong> Lucia or built-in auth provider from
-      databases.
+  <div data-animate-container>
+    <p data-animate>
+      Things I have learnt over the past three years:
+      <ul data-animate>
+        <li>React, SvelteKit, Angular and Astro web frameworks.</li>
+        <li>
+          Python, Postgress, Prisma and services like Supabase, MongoDB, Cyclic
+          store and Vercel store.
+        </li>
+        <li>
+          Java, C and SQL these were required to learn for my college courses.
+        </li>
+        <li>Bash, Perl and Fish because I'm an Arch Linux user btw.</li>
+        <li>
+          Haskell for <a
+            href="http://xmonad.org"
+            target="_blank"
+            class="contrast"
+            rel="noopener noreferrer">Xmonad</a
+          > and Lua for <a
+            href="https://awesomewm.org/"
+            class="contrast"
+            target="_blank"
+            rel="noopener noreferrer">AwesomeWM.</a
+          >
+          <br />
+           Not good at those but learnt because they were needed.
+        </li>
+      </ul>
     </p>
+  </div>
 
-    <p>If you want to contact me then email me at</p>
-    <h4 style="text-align: center;">
-      <a href="mailto:iamrishav@outlook.in">iamrishav@outlook.in</a>
-    </h4>
-  </article>
+  <div data-animate-container>
+    <article data-animate>
+      <h5>My most loved tech stack for web</h5>
+      <p><strong>Framework:</strong> SvelteKit</p>
+      <p><strong>Theme:</strong> Tailwind</p>
+      <p><strong>Database:</strong> Supabase</p>
+      <p><strong>ORM:</strong> Prisma</p>
+      <p>
+        <strong>Authentication:</strong> Lucia or built-in auth provider from
+        databases.
+      </p>
+      <p>If you want to contact me then email me at</p>
+      <h4 style="text-align: center;">
+        <a href="mailto:iamrishav@outlook.in">iamrishav@outlook.in</a>
+      </h4>
+    </article>
+  </div>
 
   <p>
     <span>
@@ -127,16 +138,7 @@ import Body from "@/Body.astro";
   </p>
 </Body>
 
-<script>
-  import { fadeIn } from "$lib/utils";
-  fadeIn(".title");
-  fadeIn(".sub-title", 0.05);
-</script>
-
 <style>
-  hgroup > :is(h1, h6) {
-    opacity: 0;
-  }
   span {
     color: var(--contrast);
   }
