--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -68,15 +68,15 @@ headings?.forEach((item: Data) => {
   publishedOn={post.data.publishedOn}
   image={post.data.image.src}
 >
-  <a href="/" class="contrast"><p>&larr; Back to post</p></a>
+  <a href="/"><p>&larr; Back to post</p></a>
 
   <section>
-    <hgroup id="post-title">
-      <h1 class="title">{post.data.title}</h1>
-      <h6>
+    <hgroup id="post-title" data-animate-container>
+      <h1 class="title" data-animate>{post.data.title}</h1>
+      <p style="margin-bottom: 0;" data-animate>
         <Date date={post.data.publishedOn} text="Published on" />
          &bull; {remarkPluginFrontmatter.minutesRead}
-      </h6>
+      </p>
     </hgroup>
   </section>
 
@@ -93,10 +93,15 @@ headings?.forEach((item: Data) => {
   </section>
 
   <div id="prose">
-    <article id="toc">
+    <article class="toc">
       <h6>Table of contents</h6>
       <TableOfContents headings={toc} />
     </article>
+
+    <details class="toc" data-onmobile>
+      <summary><strong>Table of contents</strong></summary>
+      <TableOfContents headings={toc} />
+    </details>
 
     <figure id="md">
       <Content />
@@ -104,15 +109,11 @@ headings?.forEach((item: Data) => {
   </div>
 
   <section id="bottom-navigation">
-    <a href="/" class="contrast">&larr; Back to post</a>
+    <a href="/">&larr; Back to post</a>
 
     {
       followUpPost && (
-        <a
-          href={`/post/${followUpPost.slug}`}
-          role="button"
-          class="contrast outline"
-        >
+        <a href={`/post/${followUpPost.slug}`} role="button" class="outline">
           <strong>Follow up:</strong>&ThinSpace;
           {followUpPost.data.title} &rarr;
         </a>
@@ -124,12 +125,6 @@ headings?.forEach((item: Data) => {
 </Body>
 
 <script>
-  import { fadeIn } from "$lib/utils";
-
-  fadeIn(".title");
-</script>
-
-<script>
   function initObserver() {
     const headings = document.querySelectorAll(
       "#md > h1, #md > h2, #md > h3, #md > h4, #md > h5, #md > h6",
@@ -138,11 +133,11 @@ headings?.forEach((item: Data) => {
     function headingsObserver(entries: IntersectionObserverEntry[]) {
       entries.forEach((entry) => {
         const link = document.querySelector(
-          `#toc a[href="#${entry.target.id}"]`,
+          `.toc a[href="#${entry.target.id}"]`,
         );
 
-        if (entry.isIntersecting) link?.classList.remove("contrast");
-        else link?.classList.add("contrast");
+        if (entry.isIntersecting) link?.classList.add("contrast");
+        else link?.classList.remove("contrast");
       });
     }
 
