--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { POST_COUNT } from "$data";
+import { POST_COUNT } from "$config";
 import Body from "@/Body.astro";
 import Posts from "@/Posts.astro";
 import { getCollection } from "astro:content";
