--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,28 +6,21 @@ import Body from "@/Body.astro";
   title="About me"
   description="I'm an under graduate CS student completing B.Tech from RCC Institute of Infornation Technology college. This is my final year and will be pass out after July 2024."
 >
-  <!-- <hgroup data-aimate-container>
-    <h1 data-aimate></h1>
-    <p data-aimate></p>
-  </hgroup> -->
   <hgroup data-animate-container>
     <h1 data-animate>I'm Rishav Mandal</h1>
-    <h6 data-animate>CS student and the creator of Fallenblogs.</h6>
+    <p data-animate>CS student and the creator of Fallenblogs.</p>
   </hgroup>
 
   <div data-animate-container>
-    <p data-animate>Again, Fallen is my GitHub username.</p>
-  </div>
+    <p data-animate>
+      Known as Fallen on GitHub.
+      <span>
+        I'm an under graduate CS student completing B.Tech from RCC Institute of
+        Infornation Technology college. This is my final year and will be pass
+        out after July 2024.
+      </span>
+    </p>
 
-  <p data-animate-container>
-    <span data-animate>
-      I'm an under graduate CS student completing B.Tech from RCC Institute of
-      Infornation Technology college. This is my final year and will be pass out
-      after July 2024.
-    </span>
-  </p>
-
-  <div data-animate-container>
     <p data-animate>
       Things I have learnt over the past three years:
       <ul data-animate>
@@ -144,5 +137,6 @@ import Body from "@/Body.astro";
   }
   article {
     margin-block: var(--block-spacing-vertical);
+    background-color: var(--footer-color);
   }
 </style>
