--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -83,7 +83,7 @@ headings?.forEach((item: Data) => {
       {post.data.title}
     </h1>
     <p style="margin-bottom: 0;" data-animate>
-      <Date date={post.data.publishedOn} text="Published" />
+      <Date date={post.data.publishedOn} showText />
        &bull; {remarkPluginFrontmatter.minutesRead}
     </p>
   </hgroup>
