--- a/src/lib/components/Body.astro
+++ b/src/lib/components/Body.astro
@@ -41,8 +41,13 @@ const links = [
     <!-- Global Metadata -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <meta name="generator" content={Astro.generator} />
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <meta
       http-equiv="Content-Security-Policy"
       content="block-all-mixed-content"
@@ -67,10 +72,22 @@ const links = [
     <!-- Canonical URL -->
     <link rel="canonical" href={canonicalURL} />
 
+    <!-- Google tags -->
+    <meta
+      name="google-site-verification"
+      content="0W4YhQRQryD3COHDv18N6QhKauKRnoLEuayvKbRH75w"
+    />
+    <meta name="robots" content="index,follow" />
+
     <!-- Primary Meta Tags -->
     <title>{title}</title>
     <meta name="title" content={title} />
+    <meta name="author" content="Rishav Mandal" />
     <meta name="description" content={description} />
+    <meta
+      name="keywords"
+      content="article, blog, technology, web development, linux, problem solving"
+    />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content={publishedOn ? "article" : "website"} />
