update fix Share

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -52,6 +52,16 @@ import Body from "@/Body.astro";
     </p>
   </div>
 
+  <h6>My other project:</h6>
+  <a href="https://flame-alpha.netlify.app/" target="_blank"
+    ><b>Flame</b> (Work in progress)</a
+  >
+  <br />
+  <p>
+    Flame is a social media web application where you can view other users'
+    posts, like, view comments and also create your own post.
+  </p>
+
   <div data-animate-container>
     <article data-animate>
       <h5>My most loved tech stack for web</h5>
