--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -117,9 +117,7 @@ headings?.forEach((item: Data) => {
   </div>
 
   <section id="bottom-navigation">
-    <button onclick="
-    history.back()
-    ">&larr; Back</button>
+    <a href="/blog">&larr; Blogs</a>
 
     {
       followUpPost && (
