Add search functionality

--- a/src/lib/components/Body.astro
+++ b/src/lib/components/Body.astro
@@ -41,10 +41,24 @@ const links = [
     <!-- Global Metadata -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon/favicon-16x16.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/favicon/apple-touch-icon.png"
+    />
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="generator" content={Astro.generator} />
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
@@ -115,11 +129,6 @@ const links = [
 
     <!-- Change theme color of url bar -->
     <meta name="theme-color" content="#201a19" />
-    <meta
-      name="theme-color"
-      media="(prefers-color-scheme: dark)"
-      content="#201a19"
-    />
   </head>
   <body>
     <Nav title={navTitle} {links} />
